tests/macros/multi_select/extension.stderr
error: option `extension` does not exist for kind `multi_select`
 --> $DIR/extension.rs:2:49
  |
2 |     let q = discourse::questions![MultiSelect { extension: todo!() }];
  |                                                 ^^^^^^^^^
