tests/macros/multi_select/extension.rs
fn main() {
    let q = discourse::questions![MultiSelect { extension: todo!() }];
}
